# freenetconfd-plugin-dt-sip

./: CMakeLists.txt
src/: config.c  config.h  sip.c
yang/: sip@2015-10-06.yang
