CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/build/modules")

PROJECT(freenetconfd-plugin-dt-sip)

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)

SET(SOURCES
	src/sip.c
	src/config.c
	src/config.h
)

ADD_LIBRARY(example_sip MODULE ${SOURCES})
SET_TARGET_PROPERTIES(example_sip PROPERTIES OUTPUT_NAME sip PREFIX "")

FIND_PACKAGE(LIBUBOX REQUIRED)
INCLUDE_DIRECTORIES(${LIBUBOX_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(example_sip ${LIBUBOX_LIBRARIES})

INSTALL(
	TARGETS
		example_sip
	LIBRARY DESTINATION lib/freenetconfd/
)

INSTALL(
	FILES
		yang/sip@2015-10-06.yang
	DESTINATION etc/yang/
)
